Worked on POCOR-8215
